--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.10.1",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
+    "ra-data-json-server": "^4.8.1",
+    "ra-data-simple-prisma": "^2.1.2",
     "react": "18.2.0",
+    "react-admin": "^4.8.1",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
   }
